@@ -1,3 +1,5 @@
+- Refactor: Competence course level as entity
+
 32.11.3 (11-05-2022)
 - Refactor: New statute type finders for registration
 
